--- a/res/anim/translate.xml
+++ b/res/anim/translate.xml
@@ -6,5 +6,14 @@
       android:fromYDelta="0%"
       android:toYDelta="100%"
       android:duration="3000"/>  
+      <scale 
+      android:fromXScale="1.0"
+      android:toXScale="0.0"
+      android:fromYScale="1.0"
+      android:toYScale="0.0"
+      android:pivotX="50%"
+      android:pivotY="50%"
+      android:duration="3000"
+      />
 
 </set>
