--- a/res/anim/translate.xml
+++ b/res/anim/translate.xml
@@ -12,7 +12,7 @@
       android:fromYScale="1.0"
       android:toYScale="0.0"
       android:pivotX="50%"
-      android:pivotY="50%"
+      android:pivotY="50"
       android:duration="3000"
       />
 
